[package]
name = "mpd-presence"
version = "0.1.0"
edition = "2021"

[dependencies]
mpd = "0.1.0"
discord-rich-presence = "0.2"
lofty = "0.22"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.5.0"

